Fix: navBar, User was not aligned in the container

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -50,51 +50,3 @@
   justify-content: center;
   font-weight: bold;
 }
-
-/* estilos para telas menores que 768px */
-@media only screen and (max-width: 767px) {
-  .navProduct {
-    width: 30%;
-    justify-content: left;
-    padding-left: 20px;
-  }
-  .navPedidos {
-    width: 60%;
-    justify-content: center;
-    padding-left: 0;
-  }
-  .navUser {
-    display: flex;
-    width: 20%;
-    justify-content: center;
-    align-items: center;
-    padding-left: 10px;
-  }
-  .navLogout {
-    width: 10%;
-  }
-}
-
-/* estilos para telas maiores ou iguais a 768px */
-@media only screen and (min-width: 768px) {
-  .navProduct {
-    width: 20%;
-    justify-content: center;
-    padding-left: 0;
-  }
-  .navPedidos {
-    width: 60%;
-    justify-content: left;
-    padding-left: 20px;
-  }
-  .navUser {
-    display: flex;
-    width: 10%;
-    justify-content: center;
-    /* padding-left: 25px; */
-    align-items: center;
-  }
-  .navLogout {
-    width: 10%;
-  }
-}
